* Fix bug in Module.webPath()
* Fix for returning error messages when switching user
* Add edit-ui-pages as a default permission for creating JSON data items
* Fix synchronization issue in virtual server serial sockets. 
* Ensure Global Scripts are imported first so that Meta point and Scripting data sources that are imported at the same time can use the scripts

*Version 3.5.0*
* Adding data point tags to email template model
* Adding email template help for email event handlers
* Adding Apache commons-text 1.4 as dependency
* Removing Apache commons-lang dependency in favor of commons-lang3
* Adding ability to format values as hex using AnalogRenderer See renderer help.
* Adding tags into RealTimeDataPointValue for use in high performance realtime data cache (REST controller access via /realtime endpoint)
* Creating DAO for user defined filestores, access methods to file store definitions in DAO
* Fixing data point delete confirmation in all data points table
* Improve performance and memory footprint of User Event Cache which is used to speed up recent alarm access
* Fix for class cast error due to annotated point value classes in cache
* Change JavaScript wrappers to supply null if there is no value, instead of default values false, 0, "" and null on times is no value, like p.past(MINUTE).firstTime could now be null where previously -1
* Give "add data source" and "add publisher" buttons a tabindex, click it on enter or spacebar when selected
* Fix for ValueChangeCounter discrete statistic to not assume a value at exactly the period start as a change within the period
* Fix for Mango JavaScript statistics to handle edge case where a value existing at the from time may have been missed
* Use XIDs in publisher REST endpoints for points lists
* Upgrade to Swagger 2 for REST api documentation, view page at /swagger-ui.html
* Fix additional context and unchange point value for inactive scripts on set point handlers