@@ -10,6 +10,7 @@
 * Add edit-ui-pages as a default permission for creating JSON data items
 * Fix synchronization issue in virtual server serial sockets. 
 * Ensure Global Scripts are imported first so that Meta point and Scripting data sources that are imported at the same time can use the scripts
+* Allow emails event handlers to run without recipients to allow thier scripts to execute even though no email is sent
 
 *Version 3.5.0*
 * Adding data point tags to email template model
